--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^17.0.1",
     "react-mdl": "^2.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^4.0.3",
+    "start": "^5.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
